security and auth

--- a/4-natours/starter/config.env
+++ b/4-natours/starter/config.env
@@ -1,4 +1,14 @@
 NODE_ENV=development
 PORT=3000
+
 DATABASE=mongodb+srv://vilhelmsbalodis:<PASSWORD>@cluster0.xu0b7xo.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_PASSWORD=navtavadarisana
+
+JWT_SECRET=no-one-ever-tells-you-thers-freedom-in-the-failure
+JWT_EXPIRES=90d
+JWT_COOKIE_EXPIRES=90
+
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_USERNAME=160a183f71b0d4
+EMAIL_PASSWORD=4b9c54d5d40529
+EMAIL_PORT=2525
