--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "start:development": "nodemon server.js",
     "start:production": "SET NODE_ENV=production&&nodemon server.js",
-    "debug": "ndb server.js"
+    "debug": "ndb server.js",
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
+    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
   "author": "Vilhelms Balodis",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
@@ -20,10 +25,12 @@
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.0",
+    "login": "^0.8.0",
     "mongodb": "^5.6.0",
     "mongoose": "^5.13.17",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.3",
+    "pug": "^3.0.2",
     "slugify": "^1.6.6",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.4"
@@ -37,6 +44,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
+    "parcel-bundler": "^1.12.5",
     "prettier": "^2.8.8"
   },
   "engines": {
