--- a/4-natours/starter/config.env
+++ b/4-natours/starter/config.env
@@ -12,3 +12,4 @@ EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_USERNAME=160a183f71b0d4
 EMAIL_PASSWORD=4b9c54d5d40529
 EMAIL_PORT=2525
+EMAIL_FROM=vilhelms.balodis@inbox.lv
