--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -24,6 +24,7 @@
     "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.0",
     "login": "^0.8.0",
     "mongodb": "^5.6.0",
