--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -4,8 +4,9 @@
   "description": "learning node express and mongo database",
   "main": "app.js",
   "scripts": {
-    "start:development": "nodemon server.js",
-    "start:production": "SET NODE_ENV=production&&nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "prod": "SET NODE_ENV=production&&nodemon server.js",
     "debug": "ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
     "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
